# forecasting

./: .pre-commit-config.yaml  AGENTS.md  ISSUES.md  PLAN.md  README.md  ollama_demo.py  pyproject.toml  pytest.ini
ollama/: __init__.py
scripts/: run_checks.sh
src/: __init__.py  base_rates.cache.sqlite  base_rates.py  cli.py  llm.py  main.py  models.py  ollama_utils.py  workflow.py
src/forecasting/: cli.py  config.py
src/forecasting/db/: models.py  session.py
src/forecasting/ingestion/: chunker.py  embedder.py  fetch_webpage.py  fetchers.py  models.py  parser.py  pipeline.py  vector_store.py
src/forecasting/log/: forecast_logger.py
src/forecasting/reasoning/: llm_engine.py  prompt.py
src/forecasting/retrieval/: retriever.py
src/forecasting/tools/: __init__.py  agent.py  manager.py  web_search.py
src/tools/: __init__.py  fetch_page.py  web_search.py
tests/: test_base_rates.py  test_cli.py  test_fetch_page.py  test_ollama_utils.py  test_prompt.py  test_workflow.py
tests/ingestion/: test_chunker.py
tests/tools/: test_web_search_integration.py
