[project]
name = "forecasting"
version = "0.1.0"
description = "Answer a forecasting question with an LLM"
requires-python = ">=3.13"
dependencies = [
    "typer>=0.9.0", # For CLI
    "pydantic>=2.5.0", # For data validation and settings
    "pydantic-settings>=2.1.0", # For config
    "pytest>=8.4.0",
    "pytest-mock>=3.14.1",
    "mypy>=1.0.0",
    "uv>=0.7.12", # Uv itself if managed globally or for CI
    "ruff>=0.11.13",
    "ollama",
    "brave-search-python-client>=0.3.27",
    "pre-commit",
    "psutil>=7.0.0",
    "playwright>=1.52.0",
]

[project.scripts]
forecasting = "cli:app"


[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "PL"]
ignore = []

[tool.mypy]
python_version = "3.13"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
# NEVER SET THIS TO TRUE, prefer to add stubs or targeted #ignores instead.
ignore_missing_imports = false

[[tool.mypy.overrides]]
module = "ollama"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = [
    "pydantic",
    "pydantic_settings",
    "typer",
    "typer.testing",
    "playwright.*",
    "brave_search_python_client.*",
    "psutil",
]
ignore_missing_imports = true
